--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -27,8 +27,8 @@
         "endingDate"    :    "Заканчиваеться",
 
         "loadingAnim"   :    "Загрузка",
-        "Success"       :    "Успех",
-        "Failed"       :    "Провал",
+        "success"       :    "Успех",
+        "failed"        :    "Провал",
 
         "username"      :    "Имя пользователя",
         "password"      :    "Пароль",
@@ -49,8 +49,10 @@
         "users"         :    "Пользователи",
         "adverts"       :    "Объявления",
         "backToMain"    :    "На главную",
-        "yes"           :    "Да",
-        "no"            :    "НЕТ",
+
+        "loadingAnim"   :    "Загрузка",
+        "success"       :    "Успех",
+        "failed"        :    "Провал",
 
         "areYouSureAdv" :    "Вы действительно хотите удалить данное объявление?",
         "areYouSureUser":    "Вы действительно хотите удалить данного пользователя?",
@@ -60,7 +62,9 @@
         "password"      :    "Пароль",
         "rePassword"    :    "Еще раз",
         "register"      :    "Зарегистрировать",
-
+   
+        "yes"           :    "Да",
+        "no"            :    "НЕТ",
         "newAdvert"     :    "Новое объявление",
 
         "title"         :    "Название",
