--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -27,8 +27,8 @@
         "endingDate"    :    "Закінчуется",
 
         "loadingAnim"   :    "Загрузка",
-        "Success"       :    "Успіх",
-        "Failed"       :    "Провал",
+        "success"       :    "Успіх",
+        "failed"        :    "Провал",
 
         "username"      :    "Ім'я користувача",
         "password"      :    "Пароль",
@@ -49,8 +49,10 @@
         "users"         :    "Користувачі",
         "adverts"       :    "Оголошення",
         "backToMain"    :    "На головну",
-        "yes"           :    "Так",
-        "no"            :    "Ні",
+
+        "loadingAnim"   :    "Загрузка",
+        "success"       :    "Успіх",
+        "failed"        :    "Провал",
 
         "areYouSureAdv" :    "Ви дійсно хочете видалити дане оголошення?",
         "areYouSureUser":    "Ви дійсно хочете видалити даного користувача?",
@@ -61,6 +63,8 @@
         "rePassword"    :    "Повторіть пароль",
         "register"      :    "Зареєструвати",
 
+        "yes"           :    "Так",
+        "no"            :    "Ні",
         "newAdvert"     :    "Нове оголошення",
 
         "title"         :    "Назва",
