--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -26,7 +26,7 @@
         "publishedOn"   :    "Опубліковано",
         "endingDate"    :    "Закінчуется",
 
-        "loadingAnim"   :    "Загрузка",
+        "loading"       :    "Загрузка",
         "success"       :    "Успіх",
         "failed"        :    "Провал",
 
@@ -50,7 +50,7 @@
         "adverts"       :    "Оголошення",
         "backToMain"    :    "На головну",
 
-        "loadingAnim"   :    "Загрузка",
+        "loading"       :    "Загрузка",
         "success"       :    "Успіх",
         "failed"        :    "Провал",
 
