--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -49,6 +49,7 @@
         "users"         :    "Пользователи",
         "adverts"       :    "Объявления",
         "backToMain"    :    "На главную",
+        "view"          :    "Посмотреть",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успех",
