--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -49,6 +49,7 @@
         "users"         :    "Користувачі",
         "adverts"       :    "Оголошення",
         "backToMain"    :    "На головну",
+        "view"          :    "Подивитися",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успіх",
