Fixed translated bug with header. Added footer tranlation to admin.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -51,6 +51,7 @@
         "backToMain"    :    "Back to main",
         "view"          :    "View",
         "admin"         :    "Admin",
+        "footer"        :    "Vyacheslav Sharley. All rights reserved. 2015",
 
         "loading"       :    "Loading",
         "success"       :    "Success",
