--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -51,6 +51,7 @@
         "backToMain"    :    "На главную",
         "view"          :    "Посмотреть",
         "admin"         :    "Админ",
+        "footer"        :    "Вячеслав Шарлей. Все права защищены. 2015",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успех",
