--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -51,6 +51,7 @@
         "backToMain"    :    "На головну",
         "view"          :    "Подивитися",
         "admin"         :    "Адміністратор",
+        "footer"        :    "Вячеслав Шарлей. Всі права захищені. 2015",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успіх",
