Added logout button

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -52,6 +52,7 @@
         "view"          :    "View",
         "admin"         :    "Admin",
         "footer"        :    "Vyacheslav Sharley. All rights reserved. 2015",
+        "logout"        :    "Logout",
 
         "loading"       :    "Loading",
         "success"       :    "Success",
