--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -52,6 +52,7 @@
         "view"          :    "Подивитися",
         "admin"         :    "Адміністратор",
         "footer"        :    "Вячеслав Шарлей. Всі права захищені. 2015",
+        "logout"        :    "Вихід",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успіх",
