--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -52,7 +52,7 @@
         "view"          :    "Посмотреть",
         "admin"         :    "Админ",
         "footer"        :    "Вячеслав Шарлей. Все права защищены. 2015",
-        "logout"        :    "Выход"
+        "logout"        :    "Выход",
 
         "loading"       :    "Загрузка",
         "success"       :    "Успех",
