--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -14,7 +14,7 @@
         {   "id": 10, "name": "Хобби и спорт"            }
     ],
     "frontend": {
-        "header"        :    "Free adverts",
+        "header"        :    "Бесплатные обьявления",
         "moto"          :    "Бесплатные объявления для вас. Всегда.",
         "newAdvert"     :    "Новое объявление",
         "search"        :    "Поиск",
