--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -14,7 +14,7 @@
         {   "id": 10, "name": "Хоббі та спорт"           }
     ],
     "frontend": {
-        "header"        :    "Free adverts",
+        "header"        :    "Безкоштовні оголошення",
         "moto"          :    "Безкоштовні оголошення для вас. Завжди.",
         "newAdvert"     :    "Нове оголошення",
         "search"        :    "Пошук",
