--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -88,12 +88,16 @@
             "429" : "Вы добавили максимальное количество объявлений в день.",
             "511" : "Неверные логин и пароль.",
             "500" : "Ошибка SQL запроса.",
-            "503" : "Ошибка подключения к SQL серверу."
+            "503" : "Ошибка подключения к SQL серверу.",
+            "409" : "Такой пользователь уже существует.",
+            "401" : "Требуется авторизация."
         },
         "client":{
             "emptyField"        :    "Поле не заполненно.",
             "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
             "successAdded"      :    "Объявление успешно добавлено.",
+            "successAddedUser"  :    "Пользователь успешно добавлен.",
+            "successDeletedUser":    "Пользователь успешно удален.",
             "successDelete"     :    "Объявление успешно удалено.",
             "failedSend"        :    "Ошибка при попытке добавить объявления.",
             "failedDelete"      :    "Ошибка при попытке удалить объявления.",
