--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -89,12 +89,16 @@
             "429" : "Ви додали максимальну кількість оголошень за день.",
             "511" : "Нерпавильний логін або пароль.",
             "500" : "Помилка SQL запиту.",
-            "503" : "Помилка підключення до SQL сервера."
+            "503" : "Помилка підключення до SQL сервера.",
+            "409" : "Такий користувач уже існує.",
+            "401" : "Необхідно ввійти."
         },
         "client":{
             "emptyField"        :    "Поле не заповнене.",
             "failedValidate"    :    "Поле %field% не може бути ратифіковане.",
             "successAdded"      :    "Оголошення успішно додано.",
+            "successAddedUser"  :    "Користувач успішно додан.",
+            "successDeletedUser":    "Користувач успішно видален.",
             "successDeleted"    :    "Оголошення успішно видалене.",
             "failedSend"        :    "Помилка при спробі додати оголошення.",
             "failedDelete"      :    "Помилка при спробі видалити оголошення.",
