--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -101,7 +101,9 @@
             "successDelete"     :    "Объявление успешно удалено.",
             "failedSend"        :    "Ошибка при попытке добавить объявления.",
             "failedDelete"      :    "Ошибка при попытке удалить объявления.",
-            "imageOnly"         :    "К обьявлению можно прикреплять только изображения."
+            "imageOnly"         :    "К обьявлению можно прикреплять только изображения.",
+            "passwordNotMatch"  :    "Пароли не совпадают.",
+            "userExist"         :    "Такой пользователь уже существует."
         }
     }
 }
