--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -102,7 +102,9 @@
             "successDeleted"    :    "Оголошення успішно видалене.",
             "failedSend"        :    "Помилка при спробі додати оголошення.",
             "failedDelete"      :    "Помилка при спробі видалити оголошення.",
-            "imageOnly"         :    "До оголошенню дозволено прикріпляти тільки зображення."
+            "imageOnly"         :    "До оголошенню дозволено прикріпляти тільки зображення.",
+            "passwordNotMatch"  :    "Паролі не співпадають.",
+            "userExist"         :    "Такий користувач уже існує."
         }
     }
 }
