--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -93,17 +93,20 @@
             "401" : "Требуется авторизация."
         },
         "client":{
-            "emptyField"        :    "Поле не заполненно.",
-            "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
             "successAdded"      :    "Объявление успешно добавлено.",
             "successAddedUser"  :    "Пользователь успешно добавлен.",
             "successDeletedUser":    "Пользователь успешно удален.",
             "successDelete"     :    "Объявление успешно удалено.",
+
             "failedSend"        :    "Ошибка при попытке добавить объявления.",
             "failedDelete"      :    "Ошибка при попытке удалить объявления.",
+            "failedDeleteUser"  :    "Ошибка при попытке удалить пользователя.",
+            "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
+
             "imageOnly"         :    "К обьявлению можно прикреплять только изображения.",
             "passwordNotMatch"  :    "Пароли не совпадают.",
-            "userExist"         :    "Такой пользователь уже существует."
+            "userExist"         :    "Такой пользователь уже существует.",
+            "emptyField"        :    "Поле не заполненно."
         }
     }
 }
