--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -80,7 +80,6 @@
         "phone"         :    "Номер телефону",
         "dropzone"      :    "Drop image here",
         "submit"        :    "Підтвердити"
-        
     },
     "errors": {
         "server":{
@@ -94,17 +93,20 @@
             "401" : "Необхідно ввійти."
         },
         "client":{
-            "emptyField"        :    "Поле не заповнене.",
-            "failedValidate"    :    "Поле %field% не може бути ратифіковане.",
             "successAdded"      :    "Оголошення успішно додано.",
             "successAddedUser"  :    "Користувач успішно додан.",
             "successDeletedUser":    "Користувач успішно видален.",
             "successDeleted"    :    "Оголошення успішно видалене.",
+
             "failedSend"        :    "Помилка при спробі додати оголошення.",
             "failedDelete"      :    "Помилка при спробі видалити оголошення.",
+            "failedDeleteUser"  :    "Помилка при спробі видалити користувача.",
+            "failedValidate"    :    "Поле %field% не може бути ратифіковане.",
+
             "imageOnly"         :    "До оголошенню дозволено прикріпляти тільки зображення.",
             "passwordNotMatch"  :    "Паролі не співпадають.",
-            "userExist"         :    "Такий користувач уже існує."
+            "userExist"         :    "Такий користувач уже існує.",
+            "emptyField"        :    "Поле не заповнене."
         }
     }
 }
