Added different message for update and add.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -94,6 +94,7 @@
         },
         "client":{
             "successAdded"      :    "Advert successfully added.",
+            "successUpdate"     :    "Advert successfully updated.",
             "successAddedUser"  :    "User successfully added.",
             "successDeletedUser":    "User successfully deleted.",
             "successDelete"     :    "Advert successfully deleted.",
