--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -94,6 +94,7 @@
         },
         "client":{
             "successAdded"      :    "Объявление успешно добавлено.",
+            "successUpdate"     :    "Объявление успешно обновлено.",
             "successAddedUser"  :    "Пользователь успешно добавлен.",
             "successDeletedUser":    "Пользователь успешно удален.",
             "successDelete"     :    "Объявление успешно удалено.",
