--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -94,9 +94,10 @@
         },
         "client":{
             "successAdded"      :    "Оголошення успішно додано.",
+            "successUpdate"     :    "Оголошення успішно оновлено.",
             "successAddedUser"  :    "Користувач успішно додан.",
             "successDeletedUser":    "Користувач успішно видален.",
-            "successDeleted"    :    "Оголошення успішно видалене.",
+            "successDelete"     :    "Оголошення успішно видалене.",
 
             "failedSend"        :    "Помилка при спробі додати оголошення.",
             "failedDelete"      :    "Помилка при спробі видалити оголошення.",
