--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -66,7 +66,10 @@
         "password"      :    "Пароль",
         "rePassword"    :    "Еще раз",
         "register"      :    "Зарегистрировать",
-   
+
+        "changePass"    :    "Смена пароля",
+        "update"        :    "Сменить",
+
         "yes"           :    "Да",
         "no"            :    "НЕТ",
         "newAdvert"     :    "Новое объявление",
@@ -90,7 +93,8 @@
             "500" : "Ошибка SQL запроса.",
             "503" : "Ошибка подключения к SQL серверу.",
             "409" : "Такой пользователь уже существует.",
-            "401" : "Требуется авторизация."
+            "401" : "Требуется авторизация.",
+            "400" : "Такой пользователя НЕ существует."
         },
         "client":{
             "successAdded"      :    "Объявление успешно добавлено.",
@@ -106,8 +110,10 @@
 
             "imageOnly"         :    "К обьявлению можно прикреплять только изображения.",
             "passwordNotMatch"  :    "Пароли не совпадают.",
+            "emptyField"        :    "Поле не заполненно.",
+
             "userExist"         :    "Такой пользователь уже существует.",
-            "emptyField"        :    "Поле не заполненно."
+            "userNOTExist"      :    "Такого пользователя НЕ существует."
         }
     }
 }
