--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -67,6 +67,9 @@
         "rePassword"    :    "Повторіть пароль",
         "register"      :    "Зареєструвати",
 
+        "changePass"    :    "Зміна пароля",
+        "update"        :    "Змінити",
+
         "yes"           :    "Так",
         "no"            :    "Ні",
         "newAdvert"     :    "Нове оголошення",
@@ -90,7 +93,8 @@
             "500" : "Помилка SQL запиту.",
             "503" : "Помилка підключення до SQL сервера.",
             "409" : "Такий користувач уже існує.",
-            "401" : "Необхідно ввійти."
+            "401" : "Необхідно ввійти.",
+            "400" : "Такого користувача НЕ існує."
         },
         "client":{
             "successAdded"      :    "Оголошення успішно додано.",
@@ -106,8 +110,10 @@
 
             "imageOnly"         :    "До оголошенню дозволено прикріпляти тільки зображення.",
             "passwordNotMatch"  :    "Паролі не співпадають.",
+            "emptyField"        :    "Поле не заповнене.",
+
             "userExist"         :    "Такий користувач уже існує.",
-            "emptyField"        :    "Поле не заповнене."
+            "userNOTExist"      :    "Такого користувача НЕ існує."
         }
     }
 }
