--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -48,6 +48,7 @@
         "edit"          :    "Редактировать",
         "users"         :    "Пользователи",
         "adverts"       :    "Объявления",
+        "search"        :    "Поиск",
         "backToMain"    :    "На главную",
         "view"          :    "Посмотреть",
         "admin"         :    "Админ",
