--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -48,6 +48,7 @@
         "edit"          :    "Редагувати",
         "users"         :    "Користувачі",
         "adverts"       :    "Оголошення",
+        "search"        :    "Пошук",
         "backToMain"    :    "На головну",
         "view"          :    "Подивитися",
         "admin"         :    "Адміністратор",
