--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -21,7 +21,7 @@
         "login"         :    "Войти",
         "register"      :    "Зарегистрироваться",
         "backToMain"    :    "На главную",
-        "footer"        :    "Вячеслав Шарлей. Все права защищены. 2015",
+        "footer"        :    "Вячеслав Шарлей, Аккерманн Юрий. МИТ Лицензия (MIT). 2015",
 
         "publishedOn"   :    "Опубликовано",
         "endingDate"    :    "Заканчиваеться",
@@ -52,7 +52,7 @@
         "backToMain"    :    "На главную",
         "view"          :    "Посмотреть",
         "admin"         :    "Админ",
-        "footer"        :    "Вячеслав Шарлей. Все права защищены. 2015",
+        "footer"        :    "Вячеслав Шарлей, Аккерманн Юрий. МИТ Лицензия (MIT). 2015",
         "logout"        :    "Выход",
 
         "loading"       :    "Загрузка",
