--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -21,7 +21,7 @@
         "login"         :    "Вхід",
         "register"      :    "Реєстрація",
         "backToMain"    :    "На головну",
-        "footer"        :    "Вячеслав Шарлей. Всі права захищені. 2015",
+        "footer"        :    "Вячеслав Шарлей, Аккерманн Юрій. МІТ Ліцензія (MIT). 2015",
 
         "publishedOn"   :    "Опубліковано",
         "endingDate"    :    "Закінчуется",
@@ -52,7 +52,7 @@
         "backToMain"    :    "На головну",
         "view"          :    "Подивитися",
         "admin"         :    "Адміністратор",
-        "footer"        :    "Вячеслав Шарлей. Всі права захищені. 2015",
+        "footer"        :    "Вячеслав Шарлей, Аккерманн Юрій. МІТ Ліцензія (MIT). 2015",
         "logout"        :    "Вихід",
 
         "loading"       :    "Загрузка",
