--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -21,7 +21,7 @@
         "login"         :    "Login",
         "register"      :    "Register",
         "backToMain"    :    "Back to main",
-        "footer"        :    "Vyacheslav Sharley. All rights reserved. 2015",
+        "footer"        :    "Vyacheslav Sharley, Ackermann Yuriy. The MIT License (MIT). 2015",
 
         "publishedOn"   :    "Published on",
         "endingDate"    :    "Ending date",
@@ -52,7 +52,7 @@
         "backToMain"    :    "Back to main",
         "view"          :    "View",
         "admin"         :    "Admin",
-        "footer"        :    "Vyacheslav Sharley. All rights reserved. 2015",
+        "footer"        :    "Vyacheslav Sharley, Ackermann Yuriy. The MIT License (MIT). 2015",
         "logout"        :    "Logout",
 
         "loading"       :    "Loading",
